--- a/pages/social_event.html
+++ b/pages/social_event.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Social Event</title>
     <link rel="stylesheet" href="../css/social_event.css" />
     <!-- google font for we are heading -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
